--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "attempting css",
   "main": "webpack.config.js",
   "scripts": {
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,30 +18,7 @@
   },
   "homepage": "https://github.com/irenerobb72/werk#readme",
   "devDependencies": {
-    "babel-core": "^6.7.6",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "chai": "^3.5.0",
-    "chai-enzyme": "^0.4.2",
-    "css-loader": "^0.23.1",
-    "enzyme": "^2.2.0",
-    "jsdom": "^8.4.0",
-    "mocha": "^2.4.5",
-    "node-sass": "^3.4.2",
-    "react-addons-test-utils": "^15.0.1",
-    "react-hot-loader": "^1.3.0",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1",
-    "supertest": "^1.2.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
-  },
-  "dependencies": {
-    "immutable": "^3.8.0",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.4.0"
   }
 }
