--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/irenerobb72/werk#readme",
   "devDependencies": {
+    "react": "^15.0.2",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   }
